blender crashes when I click armature bone in outliner. #44348

Closed
opened 2015-04-11 07:07:47 +02:00 by perfection cat · 21 comments

System Information
Windows XP/SP3 32bits

Blender Version
Broken: version 2.74 (sub 4), branch b'master', commit date b'2015-04-10' b'18:20', hash b'465a5d2', b'Release'
Worked: unknown

Short description of error
blender crashes when I click armature bone in outliner.
Exact steps for others to reproduce the error
The problem does not happen even if I click object of other scene, but crashes when I click armature bone from other scene.
OtherScene.png
OtherScene.blend

**System Information** Windows XP/SP3 32bits **Blender Version** Broken: version 2.74 (sub 4), branch b'master', commit date b'2015-04-10' b'18:20', hash b'465a5d2', b'Release' Worked: unknown **Short description of error** blender crashes when I click armature bone in outliner. **Exact steps for others to reproduce the error** The problem does not happen even if I click object of other scene, but crashes when I click armature bone from other scene. ![OtherScene.png](https://archive.blender.org/developer/F160825/OtherScene.png) [OtherScene.blend](https://archive.blender.org/developer/F160824/OtherScene.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Aaron Carlisle self-assigned this 2015-04-11 20:18:52 +02:00
Member

There are sirtain bugs that can't be fixed on computer software prior to windows 7 sp1. If you can recreate on a different computer then we would open this but my recommendation is to try and update your video drivers

There are sirtain bugs that can't be fixed on computer software prior to windows 7 sp1. If you can recreate on a different computer then we would open this but my recommendation is to try and update your video drivers
Author

I'm sorry, I cannot understand that you guess.
When there is armature in same scene, this phenomenon does not occur.
It occurs only when there is armature in different scene.
I do not think that it is related to video driver.

I'm sorry, I cannot understand that you guess. When there is armature in same scene, this phenomenon does not occur. It occurs only when there is armature in different scene. I do not think that it is related to video driver.
Author

This does not occur in version 2.49b.

This does not occur in version 2.49b.
Author

Added subscriber: @Sergey

Added subscriber: @Sergey
Author

It is a meaning same as the following things that he says.
"Because there is bug about it for the Mac OS, update a driver of Linux that you use."

@Sergey, How do you think?

It is a meaning same as the following things that he says. "Because there is bug about it for the Mac OS, update a driver of Linux that you use." @Sergey, How do you think?
Author

I attach an error log file.
EXCEPTION_ACCESS_VIOLATION is recorded towards the last.
error_log.txt

I attach an error log file. **EXCEPTION_ACCESS_VIOLATION** is recorded towards the last. [error_log.txt](https://archive.blender.org/developer/F161460/error_log.txt)

Added subscriber: @Blendify

Added subscriber: @Blendify

@Blendify, windows xp sp3 is still on the list of supported platforms for as long it's not a driver-specific issues. Here it's not totally clear why it'll be a driver-specific issue and needs investigation instead of just immediate close of the report.

@sindra1961, it might be opengl-related, so it worth trying downloading opengl32.dll from ftp://ftp.blender.org/sergey/softwaregl/ and placing it next to blender.exe to see if it solves the crash. This dll switches blender to fully software opengl mode, which is slower but free from driver/hardware issues.

@Blendify, windows xp sp3 is still on the list of supported platforms for as long it's not a driver-specific issues. Here it's not totally clear why it'll be a driver-specific issue and needs investigation instead of just immediate close of the report. @sindra1961, it _might_ be opengl-related, so it worth trying downloading opengl32.dll from ftp://ftp.blender.org/sergey/softwaregl/ and placing it next to blender.exe to see if it solves the crash. This dll switches blender to fully software opengl mode, which is slower but free from driver/hardware issues.
Author

@Sergey:
Operation became slow so as not to want to use blender.
However, blender crashed as reported.

@Sergey: Operation became slow so as not to want to use blender. However, blender crashed as reported.
Author

@Sergey:
I reported a result.
This is unrelated to the point that he pointed out.
Is it necessary to wait for his judgment?
Open this report again.

@Sergey: I reported a result. This is unrelated to the point that he pointed out. Is it necessary to wait for his judgment? Open this report again.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

It is necessary to wait for proper timezone to happen at developer's city, we can't be 24/7 awake ;)

I can now reproduce the issue, will commit fix soon.

It is necessary to wait for proper timezone to happen at developer's city, we can't be 24/7 awake ;) I can now reproduce the issue, will commit fix soon.
Author

@Sergey:
I am grateful for your prompt handling.
It will be tomorrow that I confirm it even if you revise it.

Best Regards.

@Sergey: I am grateful for your prompt handling. It will be tomorrow that I confirm it even if you revise it. Best Regards.

This issue was referenced by 825b015e92

This issue was referenced by 825b015e9218810ae2011df6cf4b67920ad9295d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 825b015e92.

Closed by commit 825b015e92.
Author

@Sergey:
I am sorry that confirmation becomes slow.
I confirmed that this bug was improved in the following versions.
version 2.74 (sub 4), branch b'master', commit date b'2015-04-15' b'18:32', hash b'6675fd6', b'Release'

I thank you, sergey.
Why did he close a report after all?

@Blendify:
I want you to show a clear reason when you close a report afterward.

@Sergey: I am sorry that confirmation becomes slow. I confirmed that this bug was improved in the following versions. version 2.74 (sub 4), branch b'master', commit date b'2015-04-15' b'18:32', hash b'6675fd6', b'Release' I thank you, sergey. Why did he close a report after all? @Blendify: I want you to show a clear reason when you close a report afterward.
Author

@Sergey:
I forgot to say it.
Because you were a superman, I thought that you worked in forgetting food and sleep.
(^_^) LOL LOL LOL

@Sergey: I forgot to say it. Because you were a superman, I thought that you worked in forgetting food and sleep. (^_^) LOL LOL LOL
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44348
No description provided.