Fix T44348: Blender crashes when selecting bone from inactive scene in outliner

Pose is not guaranteed to be existing in object, so can't be used for selection
flag clear. Use bones themselves for that.